--- a/langchain/requirements.txt
+++ b/langchain/requirements.txt
@@ -1,8 +1,11 @@
 bs4
 langchain
+langchain-community
 langchain-deepseek
+langchain-huggingface==0.1.0
 langchain-openai
 langgraph
 python-dotenv
-langchain-community
 pypdf
+chromadb
+sentence-transformers
